--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Repository ignores
 .vscode
+test*
+notes/runs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -161,5 +163,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-2x2-nn/logs/
-test*
